Prevent wrapping in the header text

--- a/apothecary/static/style.css
+++ b/apothecary/static/style.css
@@ -40,6 +40,8 @@ html,body {
     z-index: 99;
     width: 100%;
     text-decoration: none;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .footer {
     height: var(--footer-height);
